operator/pkg/gateway-api/testdata/gamma/mesh-redirect-path/output/httproute-mesh-redirect-path.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: mesh-redirect-path
  namespace: gateway-conformance-mesh
  resourceVersion: "1000"
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: echo
    port: 80
  rules:
  - filters:
    - requestRedirect:
        path:
          replacePrefixMatch: /replacement-prefix
          type: ReplacePrefixMatch
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /original-prefix
  - filters:
    - requestRedirect:
        path:
          replaceFullPath: /full-path-replacement
          type: ReplaceFullPath
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /full
  - filters:
    - requestRedirect:
        hostname: example.org
        path:
          replacePrefixMatch: /replacement-prefix
          type: ReplacePrefixMatch
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /path-and-host
  - filters:
    - requestRedirect:
        path:
          replacePrefixMatch: /replacement-prefix
          type: ReplacePrefixMatch
        statusCode: 301
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /path-and-status
  - filters:
    - requestRedirect:
        hostname: example.org
        path:
          replaceFullPath: /replacement-full
          type: ReplaceFullPath
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /full-path-and-host
  - filters:
    - requestRedirect:
        path:
          replaceFullPath: /replacement-full
          type: ReplaceFullPath
        statusCode: 301
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /full-path-and-status
status:
  parents:
  - conditions:
    - lastTransitionTime: "2025-06-19T03:25:28Z"
      message: Accepted HTTPRoute
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-06-19T03:25:28Z"
      message: Service reference is valid
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: io.cilium/gateway-controller
    parentRef:
      group: ""
      kind: Service
      name: echo
      port: 80
